# redirect_resolver

./: README.md  pyproject.toml
redirect_resolver/: __main__.py  cli.py  exceptions.py  resolver.py
tests/: conftest.py  test_resolver.py
tests/server/: __init__.py  server.py
