[tool.poetry]
name = "redirect_resolver"
version = "0.1.0"
description = ""
authors = ["Bulat Khasanov <afti@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
aiohttp = "^3.6.2"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
tox = "^3.15.2"
black = "^19.10b0"
pytest = {version = "^5.4.3", extras = ["test"]}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
